package gameZeldiablo.Zeldiablo.Items;

import gameZeldiablo.Zeldiablo.VariablesGlobales;

/**
 * Amulette pour fin du jeu
 */
public class Amulette extends Item{
    public Amulette() {
        super("Amulette", VariablesGlobales.SPRITE_AMULETTE, TypeItem.OBJET);
    }
}
