package gameZeldiablo.Zeldiablo.Items;

import gameZeldiablo.Zeldiablo.VariablesGlobales;

public class Hache extends Item {
    public Hache() {
        super( "Hache", VariablesGlobales.SPRITE_HACHE, TypeItem.ARME, 2.5); // 2.5 points de dégâts
    }
}
