package gameZeldiablo.Zeldiablo.Items;

public enum TypeItem {
    OBJET,
    ARME,
    MISC
}
